--- a/settings.json
+++ b/settings.json
@@ -1,8 +1,8 @@
 {   
     "your-password": "COMMING SOON",
-    "email": "replace with your e-mail",
-    "name": "@mr Indian Hacker",
+    "email": "ronnyrajput426@gmail.com",
+    "name": "@𝐀𝐁 𝐊𝐈𝐍𝐆 𝐊𝐈 𝐁𝐄𝐇𝐍 𝐊𝐀 𝐓𝐇𝐎𝐊𝐎 𝐌𝐀𝐒𝐎𝐎𝐌 𝐉𝐀𝐍𝐈 𝐇𝐄𝐑𝐄",
     "status": "on",
     "custom_logger_status": "on",
-    "id": "00000000000000"
+    "id": ""
 }
